fix: post not found layout and resource header spacing

--- a/src/scss/templates/_posts.scss
+++ b/src/scss/templates/_posts.scss
@@ -74,6 +74,10 @@
 			max-width: none;
 			grid-column: 1 / -1;
 
+			@screen max-tablet-portrait {
+				@apply px-0;
+			}
+
 			.page-title {
 				@apply mx-auto px-0;
 				max-width: theme( 'layout.contentSize' );
@@ -91,7 +95,7 @@
 					min-height: 326px;
 					max-height: 326px;
 
-					@media screen and ( min-width: theme('screens.tablet-portrait') ) and ( max-width: theme('screens.tablet-landscape') ) {
+					@media screen and ( max-width: theme('screens.tablet-landscape') ) {
 						min-height: 200px;
 						max-height: 200px;
 					}
@@ -116,6 +120,21 @@
 			.entry-footer {
 				@apply ml-0 mr-auto px-0;
 			}
+		}
+	}
+
+	.not-found {
+		@apply w-full;
+		max-width: none;
+		grid-column: 1 / -1;
+
+		.page-header {
+			@apply mx-auto px-0;
+			max-width: theme( 'layout.contentSize' );
+		}
+
+		.page-content {
+			@apply px-0;
 		}
 	}
 }
